# my-wallet-cli

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  FILE_MANIFEST.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_IMPLEMENTATION.md  README_WALLET_CLI.md
.github/workflows/: ci.yml  release.yml
tcx/: Cargo.toml
tcx-bitcoin-bdk/: Cargo.toml
tcx-bitcoin-bdk/src/: address.rs  lib.rs  signer.rs  transaction.rs
tcx-bitcoin-bdk/tests/: integration_tests.rs
tcx-evm/: Cargo.toml
tcx-evm/src/: address.rs  lib.rs  signer.rs  transaction.rs
tcx-evm/tests/: integration_tests.rs
tcx-solana/: Cargo.toml
tcx-solana/src/: address.rs  lib.rs  signer.rs  transaction.rs
tcx-ssh/: Cargo.toml
tcx-ssh/src/: lib.rs  ssh_keys.rs
tcx-substrate/: Cargo.toml
token-core/tcx-bitcoin-bdk/: Cargo.toml
token-core/tcx-bitcoin-bdk/src/: address.rs  signer.rs
token-core/tcx-evm/: Cargo.toml
token-core/tcx-evm/src/: address.rs  signer.rs  transaction.rs
token-core/tcx-solana/src/: lib.rs
token-core/wallet-cli/src/: keystore_manager.rs
token-core/wallet-cli/src/commands/: balance.rs  create.rs  delete.rs  export.rs  ssh_keygen.rs
wallet/: Cargo.toml
wallet-cli/: Cargo.toml
wallet-cli/src/: config.rs  keystore_manager.rs  lib.rs  main.rs  output.rs
wallet-cli/src/commands/: address.rs  create.rs  delete.rs  list.rs  mod.rs  send.rs  sign_message.rs  ssh_keygen.rs
wallet-cli/tests/: integration_tests.rs
wallet/tcx-bitcoin-bdk/: Cargo.toml
wallet/tcx-bitcoin-bdk/src/: address.rs  keystore.rs  lib.rs  transaction.rs
wallet/tcx-bitcoin-bdk/tests/: integration_tests.rs
wallet/tcx-evm/: Cargo.toml
wallet/tcx-evm/src/: address.rs  keystore.rs  lib.rs  signer.rs  transaction.rs
wallet/tcx-solana/: Cargo.toml
wallet/tcx-solana/src/: address.rs  keystore.rs  lib.rs  signer.rs  transaction.rs
wallet/tcx-solana/tests/: integration_tests.rs
wallet/tcx-ssh/: Cargo.toml
wallet/tcx-ssh/src/: lib.rs  mnemonic.rs  ssh_keys.rs
wallet/wallet-cli/: Cargo.toml
wallet/wallet-cli/src/: config.rs  keystore.rs  main.rs  output.rs
wallet/wallet-cli/src/commands/: address.rs  balance.rs  create.rs  delete.rs  export.rs  list.rs  mod.rs  send.rs  sign_message.rs  ssh_keygen.rs
