[workspace]
resolver = "2"

members = [
    # Core infrastructure
    "tcx-proto",
    "tcx-constants",
    "tcx-primitive",
    "tcx-crypto",
    "tcx-keystore",
    "tcx-common",
    # "tcx-migration",  # temporarily excluded: sp-core serde version conflict

    # Cryptographic libraries
    "tcx-libs/ed25519-dalek-bip32",
    "tcx-libs/tonlib-core",

    # Chain implementations (original token-core)
    "tcx-atom",
    "tcx-btc-kin",
    "tcx-ckb",
    "tcx-eos",
    "tcx-eth",
    "tcx-eth2",
    "tcx-filecoin",
    # "tcx-substrate",  # temporarily excluded: sp-core serde version conflict
    "tcx-tezos",
    "tcx-ton",
    "tcx-tron",

    # Chain implementations (new: EVM / Bitcoin / Solana)
    # "tcx-evm",  # independent crate (no sp-core dependency)
    # "tcx-bitcoin-bdk",  # independent crate (no sp-core dependency)
    # "tcx-solana",  # independent crate (no sp-core dependency)

    # SSH key generation from mnemonic
    # "tcx-ssh",  # independent crate (no sp-core dependency)

    # Main entry point (protobuf API)
    # "tcx",  # temporarily excluded: sp-core serde version conflict

    # CLI application
    # "wallet-cli",  # independent crate (no sp-core dependency)
]
