[package]
name = "tcx-bitcoin-bdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tcx-keystore  = { path = "../tcx-keystore" }
tcx-constants = { path = "../tcx-constants" }
tcx-common    = { path = "../tcx-common" }
tcx-primitive = { path = "../tcx-primitive" }
secp256k1     = { version = "=0.24.3", features = ["rand", "recovery"] }
bitcoin       = "=0.29.2"
bitcoin_hashes = "=0.11.0"
hex           = "=0.4.3"
base64        = "=0.13.1"
serde         = { version = "=1.0.147", features = ["derive"] }
serde_json    = "=1.0.89"
anyhow        = "=1.0.79"
thiserror     = "=1.0.56"
zeroize       = { version = "1.6", features = ["derive"] }
