[package]
name = "tcx-solana"
version = "0.1.0"
edition = "2021"

[dependencies]
tcx-keystore  = { path = "../tcx-keystore" }
tcx-constants = { path = "../tcx-constants" }
tcx-common    = { path = "../tcx-common" }
tcx-primitive = { path = "../tcx-primitive" }
ed25519-dalek = { version = "=1.0.1", features = ["u64_backend"] }
sha2          = "=0.10.6"
hex           = "=0.4.3"
base64        = "=0.13.1"
bs58          = "0.4"
serde         = { version = "=1.0.147", features = ["derive"] }
serde_json    = "=1.0.89"
anyhow        = "=1.0.79"
thiserror     = "=1.0.56"
zeroize       = { version = "1.6", features = ["derive"] }
