[package]
name = "tcx-ssh"
version = "0.1.0"
authors = ["Manus AI"]
edition = "2021"

[dependencies]
tcx-keystore = { path = "../tcx-keystore" }
tcx-crypto = { path = "../tcx-crypto" }
tcx-common = { path = "../tcx-common" }

# SSH key generation
ed25519-dalek = "2.1"
sha2 = "0.10"
base64 = "0.21"

# BIP39 for mnemonic
bip39 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"

# Memory safety
zeroize = { version = "1.6", features = ["derive"] }

# MD5 for fingerprinting
md5 = "0.7"

[dev-dependencies]
serial_test = "2.0"
tempfile = "3.8"
