[package]
name = "wallet-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wallet"
path = "src/main.rs"

[dependencies]
tcx-keystore      = { path = "../tcx-keystore" }
tcx-crypto        = { path = "../tcx-crypto" }
tcx-common        = { path = "../tcx-common" }
tcx-constants     = { path = "../tcx-constants" }
tcx-primitive     = { path = "../tcx-primitive" }
tcx-evm           = { path = "../tcx-evm" }
tcx-bitcoin-bdk   = { path = "../tcx-bitcoin-bdk" }
tcx-solana        = { path = "../tcx-solana" }
tcx-ssh           = { path = "../tcx-ssh" }

# CLI - use 3.x which has looser serde dependency
clap              = { version = "=3.2.25", features = ["derive"] }

# Async runtime - pin to version compatible with libc=0.2.140
tokio             = { version = "=1.28.2", features = ["full"] }

# Serialization - match tcx pinned versions exactly
serde             = { version = "=1.0.147", features = ["derive"] }
serde_json        = "=1.0.89"
toml              = "=0.5.11"

# Error handling
anyhow            = "=1.0.79"
thiserror         = "=1.0.56"

# Logging
log               = "=0.4.17"
env_logger        = "=0.10.1"

# Utilities
hex               = "=0.4.3"
uuid              = { version = "=1.2.2", features = ["v4", "serde"] }
dirs              = "=4.0.0"
chrono            = { version = "=0.4.23", features = ["serde"] }

# Password prompt
rpassword         = "=7.3.1"

[dev-dependencies]
tempfile = "3.8"
