[package]
name = "tcx-bitcoin-bdk"
version = "0.1.0"
authors = ["Manus AI"]
edition = "2021"

[dependencies]
tcx-keystore = { path = "../tcx-keystore" }
tcx-common = { path = "../tcx-common" }
tcx-proto = { path = "../tcx-proto" }
tcx-constants = { path = "../tcx-constants" }

# BDK for Bitcoin support
bdk = { version = "0.28", features = ["sqlite"] }
bdk_chain = "0.10"

# Bitcoin
bitcoin = "0.31"
bitcoincore-rpc = "0.17"

# Base64 encoding
base64 = "0.21"

# Cryptography
secp256k1 = "0.28"
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"

# Memory safety
zeroize = { version = "1.6", features = ["derive"] }

[dev-dependencies]
serial_test = "2.0"
