[package]
name = "tcx-bitcoin-bdk"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin       = { version = "0.30", features = ["rand-std", "secp-recovery"] }
hex           = "0.4"
base64        = "0.21"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
anyhow        = "1.0"
thiserror     = "1.0"
zeroize       = { version = "1.6", features = ["derive"] }
tiny-bip39    = "1.0"
