[package]
name = "tcx-evm"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1  = { version = "0.28", features = ["rand", "recovery", "global-context"] }
sha3       = "0.10"
hex        = "0.4"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow     = "1.0"
thiserror  = "1.0"
zeroize    = { version = "1.6", features = ["derive"] }
tiny-bip39 = "1.0"
bitcoin    = { version = "0.30", features = ["rand-std"] }
