[package]
name = "tcx-ssh"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2          = "0.10"
hex           = "0.4"
base64        = "0.21"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
anyhow        = "1.0"
thiserror     = "1.0"
zeroize       = { version = "1.6", features = ["derive"] }
tiny-bip39    = "1.0"

[dev-dependencies]
tempfile = "3.8"
