[package]
name = "wallet-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wallet"
path = "src/main.rs"

[dependencies]
tcx-evm         = { path = "../tcx-evm" }
tcx-bitcoin-bdk = { path = "../tcx-bitcoin-bdk" }
tcx-solana      = { path = "../tcx-solana" }
tcx-ssh         = { path = "../tcx-ssh" }
clap            = { version = "4.4", features = ["derive"] }
tokio           = { version = "1", features = ["full"] }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
toml            = "0.8"
anyhow          = "1.0"
thiserror       = "1.0"
log             = "0.4"
env_logger      = "0.11"
hex             = "0.4"
uuid            = { version = "1", features = ["v4", "serde"] }
dirs            = "5.0"
chrono          = { version = "0.4", features = ["serde"] }
rpassword       = "7.3"
atty          = "0.2"
tiny-bip39      = "1.0"
zeroize         = { version = "1.6", features = ["derive"] }
aes-gcm         = "0.10"
rand            = "0.8"
sha2            = "0.10"
pbkdf2          = "0.12"
hmac            = "0.12"

[dev-dependencies]
tempfile = "3.8"
